 - QueryHandler, UpdateHandler and SparqlServer all now return SPARQL Service Description where appropriate
- Configuration API
 - dnr:SparqlDataset and dnr:usingDataset properties
 - All new IGenericIOManager implementations - Fuseki, In-Memory and Read-Only - are now loadable via the ConfigurationLoader
 - dnr:enableCors property for disabling CORS Headers on HTTP Handlers
- Parsing
 - Additional N3 Feature Support
 - Variable Nodes
 - New SimpleN3RulesReasoner which can process simple N3 rules of the form { } => { }
 - Notation 3 Parser supports Variables, @forSome and @forAll fully
- Query
 - GROUP BY is now supported in subqueries
 - GROUP BY (?x AS ?y) now supported
 - Scalar Arguments for aggregates added when in 1.1 Extended mode (only GROUP_CONCAT allows scalar arguments in 1.1 mode)
 - Added new SPARQL 1.1 functions
  - String Functions - CONCAT, CONTAINS, ENCODE_FOR_URI, LCASE, STRENDS, STRLEN, STRSTARTS, SUBSTR, UCASE
  - Date Time Functions - DAY, HOURS, MINUTES, MONTH, NOW, SECONDS, TIMEZONE, TZ and YEAR
  - Numeric Functions - ABS, CEIL, FLOOR, ROUND and ISNUMERIC
  - Hash Functions - MD5, SHA1, SHA224, SHA256, SHA384, SHA512
 - Additional Pellet Server Client features
  - ICV and Cluster Services
- Update
 - Added support for HTTP PATCH operation to SPARQL Uniform HTTP Protocol implementations
 - Added support for use of ?default as opposed to ?graph in the SPARQL Uniform HTTP Protocol support
 - Added support for the newly defined SPARQL Update 1.1 ADD, COPY and DELETE commands
- Storage
 - Expanded the IGenericIOManager interface to include methods for deletings graphs and listing graphs
 - Connector for Fuseki
 - Connector which wraps an in-memory store (i.e. a IInMemoryQueryableStore) or a SPARQL dataset (i.e. a ISparqlDataset)
 - Connector which wraps any IGenericIOManager/IQueryableGenericIOManager and makes it read-only
- Writing