@@ -24,11 +24,14 @@ Added
  - dnr:SparqlDataset and dnr:usingDataset properties
  - All new IGenericIOManager implementations - Fuseki, In-Memory and Read-Only - are now loadable via the ConfigurationLoader
  - dnr:enableCors property for disabling CORS Headers on HTTP Handlers
+ - dnr:serviceDescription property for supplying own SPARQL Service Description for SPARQL Handlers
+ - dnr:fromEmbedded property for loading data from embedded resources
 - Parsing
  - Additional N3 Feature Support
  - Variable Nodes
  - New SimpleN3RulesReasoner which can process simple N3 rules of the form { } => { }
  - Notation 3 Parser supports Variables, @forSome and @forAll fully
+ - New EmbeddedResourceLoader for loading RDF from embedded resources in assemblies
 - Query
  - GROUP BY is now supported in subqueries
  - GROUP BY (?x AS ?y) now supported
@@ -66,6 +69,7 @@ Changed
  - Some bug fixes around LiteralNode value comparisons regarding equivalences between .Net types and XML Schema types
  - Validation of Language Tags was overzealous and rejected some valid language tags and in some places language 
    tags weren't validated when they should have been
+ - RDF/XML writer failed to properly XML encode URIs which contained multiple unescaped ampersands
 - General Improvements
  - Internal restructuring of how MIME Types are managed
   - Allows for new MIME Types, File Extensions and parsers to be registered with the API and used automatically where appropriate
